# mabe-mouse-behavior-detection

./: README.md  kaggle_optimized_final.ipynb  kaggle_submission_fast.ipynb  predict.py  pyproject.toml  requirements.txt  social-action-recognition-in-mice-xgboost.ipynb  train.py
src/: __init__.py  config.py  data_loader.py  features.py  models.py  pipeline.py  postprocessing.py  semi_supervised_config.py
src/semi_supervised/: __init__.py  autoencoder.py  label_propagation.py  pseudo_labeling.py  semi_supervised_pipeline.py
