[project]
name = "mabe-baseline"
version = "1.0.0"
description = "Modular baseline for MABe Mouse Behavior Detection"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy<2.0",
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "tqdm>=4.64.0",
    "joblib>=1.2.0",
    "scipy>=1.10.0",
    "pyarrow>=10.0.0",
]

[project.optional-dependencies]
catboost = ["catboost>=1.1.0"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
